--- a/index.html
+++ b/index.html
@@ -243,3 +243,21 @@
 
     </body>
 </html>
+
+
+
+<!--Summary-->
+<br>
+          <br>
+          <br>
+          <div class="container">
+            <div class="row">
+              <div class="col"><h1>Summary</h1></div>
+              <div class="w-100"></div>
+              <br>
+              <div class="col">We conducted research by first creating a research plan and then interviewing multiple users about why they donate or volunteer with nonprofits. We also created a survey that garnered over 10 responses to similar questions. These questions consisted of what volunteers look for in a non-profit, what is most important to them, and things pertaining specifically to children with special needs.  Some key findings that we had was that most volunteers care most about the mission of an organization, leadership & organization, and transparency.  After researching this issue, we found that competitors have transparency in their mission and ease of a donation process. United Angels Foundation was text-heavy making it hard to understand their purpose. The donation button was also hidden in the navigation bar and did not stand out. 
+              </div>
+            </div>
+          </div>
+<br>
+<br>
